added long implementation of vertex and edge